--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "export MODE=production && webpack",
-    "dev": "export MODE=development && webpack serve"
+    "dev": "export MODE=development && webpack serve",
+    "build-win": "set MODE=production && webpack",
+    "dev-win": "set MODE=development && webpack serve"
   },
   "keywords": [],
   "author": "",
