Better page layout and fixed windows commands

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "export MODE=production && webpack",
     "dev": "export MODE=development && webpack serve",
-    "build-win": "set MODE=production && webpack",
-    "dev-win": "set MODE=development && webpack serve"
+    "build-win": "$env:MODE=\"production\" & webpack",
+    "dev-win": "$env:MODE=\"development\" & webpack serve"
   },
   "keywords": [],
   "author": "",
